Fix: styling on mobile homepage and details page

--- a/src/components/DetailsText/style.module.css
+++ b/src/components/DetailsText/style.module.css
@@ -32,6 +32,7 @@
   display: flex;
   flex-direction: column;
   gap: 0.5em;
+  padding: 0.5rem;
 }
 
 .reserve {
