--- a/src/pages/Details/style.module.css
+++ b/src/pages/Details/style.module.css
@@ -22,7 +22,7 @@
   border-radius: 0 44% 44% 0;
   position: absolute;
   left: 0;
-  bottom: 50%;
+  bottom: 70%;
   display: flex;
   align-items: center;
   justify-content: flex-end;
