--- a/src/pages/Home/style.module.css
+++ b/src/pages/Home/style.module.css
@@ -6,6 +6,7 @@
   height: 100%;
   justify-content: center;
   gap: 50px;
+  padding: 30px 0;
 }
 
 .title {
@@ -14,7 +15,9 @@
 
 .list {
   gap: 30px;
+  display: flex;
   flex-direction: column;
+
 }
 
 .subtitle {
